# pepper-package

./: README.md
pepper_control/: CMakeLists.txt  package.xml
pepper_control/scripts/: move_wheels.py  raise_hands.py
pepper_description/config/: pepper.rviz
pepper_description/urdf/pepper1.0_generated_urdf/: pepper.urdf
pepper_vhw_interface/: CMakeLists.txt  package.xml
pepper_vhw_interface/src/: virtual_hw_interface.cpp
pepperv_bringup/: CMakeLists.txt  package.xml
pepperv_bringup/config/: controllers.yaml
pepperv_bringup/launch/: pepperv_bringup.launch
