<?xml version="1.0"?>
<package format="2">
  <name>pepper_vhw_interface</name>
  <version>0.0.0</version>
  <description>The pepper_virtual_hw_interface package</description>
  <maintainer email="takkie8halimi@gmail.com">Takkie Halimi</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Build dependencies -->
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

